--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<li><input type="checkbox"> I would like mustard with that</li>
 		<li><input type="checkbox"> I would like profit with that</li>
 	</ul>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+	<script src="//code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="MoneyInput.js"></script>
 </body>
 </html>
